--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@uploadcare/blocks": "0.50.4",
     "@uploadcare/file-uploader": "^1.11.1",
     "@uploadcare/react-uploader": "^1.3.0",
+    "antd": "^5.22.4",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^7.0.2"
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
+    "react-share": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
